# jscore

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jscore/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/jscore/app/: MainActivity.kt  Underscore.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/jscore/app/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jscore/: CMakeLists.txt  build.gradle
jscore/src/androidTest/java/jscore/: ExampleInstrumentedTest.java
jscore/src/main/: AndroidManifest.xml
jscore/src/main/cpp/: CMakeLists.txt  blob.cpp  blob.h  jscore-lib.cpp  pre.cpp  pre.h
jscore/src/main/cpp/libs/v8/arm64-v8a/include/: snapshot_blob.h
jscore/src/main/cpp/libs/v8/armeabi-v7a/include/libplatform/: libplatform.h  v8-tracing.h
jscore/src/main/cpp/libs/v8/x86/include/: natives_blob.h
jscore/src/main/java/jscore/: JSContext.kt
jscore/src/main/java/jscore/android/: JSContext.kt  JSObject.kt
jscore/src/main/java/jscore/android/parse/: ArrayListParse.kt  Parse.kt  Parser.kt  TypeParse.kt
jscore/src/test/java/jscore/: ExampleUnitTest.java
